--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,8 @@
   "minimum-stability": "dev",
   "bin": ["bin/block-creator"],
   "require": {
-    "php": ">=8.0",
-    "composer/installers": "^1.0 || ^2.0"
+    "composer/installers": "^1.0 || ^2.0",
+    "ext-readline": "*"
   },
   "config": {
     "allow-plugins": {
